--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• अब आप चैट को नीचे की तरफ़ खींचकर पढ़ी न गई सभी चैट आसानी से देख सकते हैं। पढ़ी न गई चैट्स को तुरंत फ़िल्टर करें, लेकिन उन्हें पढ़कर छोड़ना है या नहीं, यह फ़ैसला लेने के लिए पूरा समय लें।
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
