--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• يُمكنك الآن رؤية كل دردشاتك غير المقروءة بسهولة من خلال سحب قائمة الدردشات إلى الأسفل.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
