--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• Nu kan du nemt se alle dine ulæste chats ved at trække ned i chatlisten. Filtrér hurtigt, hvad der er ulæst, men tag dig gerne tid, mens du beslutter dig for, om du vil lade dem være ulæst.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
