--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Τώρα μπορείς εύκολα να δεις όλες τις μη αναγνωσμένες συνομιλίες σου πηγαίνοντας προς τα κάτω στη λίστα συνομιλιών.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
