--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,1 @@
-• Ahora puedes ver tus chats no leídos desplazándote hacia abajo en la lista de chats. Filtra rápidamente los mensajes no leídos, pero no tengas prisa en decidirte a leerlos.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
