--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• עכשיו אפשר לראות בקלות את כל הצ׳אטים שלא נקראו על ידי גרירה מטה ברשימת הצ׳אטים.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
