--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Je kunt nu eenvoudig al je ongelezen chats zien door je chatlijst omlaag te trekken. Filter snel wat ongelezen is, maar neem gerust de tijd om te beslissen of je ze ook daadwerkelijk leest.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
