--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Теперь вы можете легко увидеть все непрочитанные чаты, проведя пальцем вниз по списку чатов. Быстро отфильтруйте непрочитанное, но можете не торопиться, решая, оставлять ли их в прочитанных.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
