--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,1 +1,1 @@
-• Teraz môžete jednoducho zobraziť všetky svoje neprečítané čety potiahnutím nadol v zozname četov.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
