--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• Artık sohbet listesini aşağı çekerek tüm okunmamış sohbetlerini kolayca görebilirsin. Okunmamış sohbetleri hızla filtrele ancak okunmuş olarak bırakıp bırakmayacağına karar verirken de acele etme.
+• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
